fixed alignment of input in doctor schedule

--- a/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
+++ b/client/src/Pages/DocDashboard/Schedule/DoctorSchedule.module.css
@@ -372,7 +372,6 @@
    .DSContainer1 form {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      justify-items: start;
    }
    .DSContainer1 label {
       font-size: 1rem;
@@ -492,10 +491,14 @@
       margin: auto;
       height: 800px;
    }
+   .DSContainer1 form input{
+      max-width: 35rem;
+      width: 100%;
+   }
    .patientContainer {
       grid-column: 1/3;
       grid-row: 1/2;
-      width: 90%;
+      width: 95%;
       margin: 0 auto;
    }
    .DSpatientContainer {
@@ -507,6 +510,7 @@
       grid-row: 2/3;
       height: 100%;
       align-self: center;
+      margin-left: 1rem;
    }
    .appointmentContainer {
       height: 25rem;
@@ -514,6 +518,11 @@
    }
    .appointmentContainer .nameSection {
       width: 12.5rem;
+   }
+}
+@media(max-width:768px){
+   .appointTime{
+      margin-left: 1rem;
    }
 }
 /*Mobile screens*/
